--- a/README
+++ b/README
@@ -1,10 +1,10 @@
-= Redmine Markdown formatter
+= ChiliProject Markdown formatter
 
 This is a redmine plugin for supporting Markdown as a wiki format.
 
-== What is redmine?
-Redmine is a flexible project management web application.
-See ((<the official site|URL:http://www.redmine.org>)) for more details.
+== What is ChiliProject?
+ChiliProject is a fork of Redmine a flexible project management web application.
+See ((<the official site|URL:http://www.chiliproject.org>)) for more details.
 
 == What is Markdown?
 (from http://daringfireball.net/projects/markdown/)
@@ -18,22 +18,20 @@ for more details.
 
 == Plugin installation
 === Prerequisites
-* Redmine and its prerequisites
-* rdiscount gem - see http://tomayko.com/writings/ruby-markdown-libraries-real-cheap-for-you-two-for-price-of-one
+* ChiliProject and its prerequisites
+* redcarpet gem (>= 2.0.0b5) - see https://github.com/tanoku/redcarpet
 
 === Installation
 (1) Copy the plugin directory into the vendor/plugins directory
-(2) Start Redmine
+(2) Start ChiliProject
 
 Installed plugins are listed on 'Admin -> Information' screen.
 
 === Credits
+* Larry Baltz (http://github.com/bitherder) for creating the original
+  Redmine Markdown Formatter (using the RDiscount Gem)
 * Yuki Sonoda (http://github.com/yugui) did the real work by creating the
   redmine_rd_formatter
 * Jean-Philippe Lang for making the change to RedMine (based on Yuki's patch) to
   allow pluggable formatters
-
-== Future Plans
-* make the blockquote and unblockquote work for list items to indent
-  and un-indent.  Current behavior is kind of confusing.
 
